--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,12 +12,10 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: tonybajan/flake8-check-action@v1.3.0
-      with:
-        select: E3,E4,E5,E7,W6,F,B,G0
-        maxlinelength: 100
-        repotoken: ${{ secrets.TOKEN_GITHUB }}
+      - name: Check code
+        run: |
+          cd services/svc/Servicedjango
+          python manage.py check
 
 
   build:
