--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Check code
-        run: python services/svc/Servicedjango/manage.py check
+        run: |
+          cd services/svc/Servicedjango
+          python -m pip install -r requirements.txt
+          python manage.py check
 
 
   build:
