--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          run: cd services/svc/
           context: .
           tags: ${{secrets.DOCKERHUB_USER}}/djangodevops:latest
           push: true
